[20211229] Base64 수정